--- a/index.html
+++ b/index.html
@@ -120,10 +120,13 @@
             <div class="row about-me__content" data-aos="fade-up">
                 <div class="column large-full about-me__text">
                     <p class="lead">
-                    Nulla aspernatur nam et accusantium. Tempore delectus dignissimos aut
-                    ab commodi. Labore et cupiditate temporibus odio debitis eaque. 
-                    Officia provident aut iste et dicta perferendis. Velit iure adipisci. 
-                    Molestiae qui fuga rerum facilis.
+                    Welcome to my cybersecurity journey! I'm thrilled to share my passion for 
+                    securing digital landscapes and my relentless pursuit of knowledge in the ever-evolving field of cybersecurity.
+                    With a solid educational foundation in the form of a BSc degree in Mathematical Science with a focus on Computer 
+                    Science from the esteemed University of Limpopo, I embarked on a path that led me to diverse roles in the tech 
+                    industry. My initial experience as a Business Intelligence Consultant and IT Support at RIC Consulting provided 
+                    me with a holistic understanding of technology ecosystems. However, my heart found its true calling in the realm 
+                    of cybersecurity.
                     </p>
 
                     <p>
