--- a/index.html
+++ b/index.html
@@ -130,15 +130,15 @@
                     </p>
 
                     <p>
-                    My journey into the world of cybersecurity has been one of dedication, hard work, and continuous growth. 
-                    I've honed my skills to become a proficient SOC Analyst, equipped to tackle the complex challenges of
-                    today's cyber landscape. My hands-on experience extends across a spectrum of platforms, including 
-                    Letsdefend.io, RangeForce, ISC2, Qualys, Fortinet, Microsoft, Malware-Traffic-Analysis, and EC-Council
-                    Ethical Hacking Essentials.
+                        My journey into the world of cybersecurity has been one of dedication, hard work, and continuous growth. 
+                        I've honed my skills to become a proficient SOC Analyst, equipped to tackle the complex challenges of
+                        today's cyber landscape. My hands-on experience extends across a spectrum of platforms, including 
+                        Letsdefend.io, RangeForce, ISC2, Qualys, Fortinet, Microsoft, Malware-Traffic-Analysis, and EC-Council
+                        Ethical Hacking Essentials.
                     </p>
 
                     <p>
-                    Certifications have been crucial milestones in my journey. I proudly hold the (ISC)²: Certified in
+                        Certifications have been crucial milestones in my journey. I proudly hold the (ISC)²: Certified in
                         Cybersecurity credential, a testament to my commitment to upholding the highest standards of
                         cybersecurity practices. Additionally, I've earned the Microsoft Certified: Cybersecurity 
                         Architect Expert and Microsoft Certified: Security Operations Analyst Associate certifications,
@@ -146,7 +146,7 @@
                     </p>
 
                     <p>
-                    A significant facet of my expertise lies in my advanced training with LetsDefend.io, 
+                        A significant facet of my expertise lies in my advanced training with LetsDefend.io, 
                         where I've specialized in honing threat hunting and incident response techniques. Identifying 
                         and mitigating security risks, conducting exhaustive vulnerability assessments, and engineering robust, 
                         secure data solutions are where I thrive.
@@ -167,10 +167,10 @@
 
                     
                     <p>
-                      If your organization seeks a dynamic, motivated cybersecurity professional with an unquenchable thirst 
-                      for knowledge, a penchant for innovation, and a proven track record in safeguarding digital domains, 
-                      then I am confident that I am the ideal candidate. Together, let's fortify your organization's security 
-                      objectives and navigate the digital landscape with confidence.  
+                        If your organization seeks a dynamic, motivated cybersecurity professional with an unquenchable thirst 
+                        for knowledge, a penchant for innovation, and a proven track record in safeguarding digital domains, 
+                        then I am confident that I am the ideal candidate. Together, let's fortify your organization's security 
+                        objectives and navigate the digital landscape with confidence.  
                     </p>
 
                 </div>
@@ -191,7 +191,7 @@
 
             <div class="row heading-block" data-aos="fade-up">
                 <div class="column large-full">
-                    <h2 class="section-heading">Work & Education</h2>
+                    <h2 class="section-heading">Experience & Education</h2>
                 </div>
             </div>
 
