--- a/index.html
+++ b/index.html
@@ -207,12 +207,59 @@
                         <div class="timeline__block">
                             <div class="timeline__bullet"></div>
                             <div class="timeline__header">
-                                <p class="timeline__timeframe">July 2018 - Present</p>
-                                <h3 class="item-title">Awesome Studio</h3>
-                                <h5>Lead Designer</h5>
+                                <p class="timeline__timeframe">MARCH 2023 - PRESENT</p>
+                                <h3 class="item-title">RIC Consulting</h3>
+                                <h5>Junior Consultant (Qlik Support)</h5>
                             </div>
                             <div class="timeline__desc">
-                                <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+                                <p>
+                                    As a Junior Consultant specializing in Qlik Support at RIC Consulting, 
+                                    I've embraced a role that allows me to continually expand my skill set while
+                                    effectively serving in multiple capacities. This dynamic position has been an
+                                    incredible learning opportunity, propelling me forward in the realm of technology 
+                                    and client-focused service.
+                                </p>
+                                
+                                <p>
+                                  In this role, I've had the privilege of shouldering the responsibilities of not just one,
+                                    but two vital roles, a testament to my adaptability and commitment to personal growth.
+                                    I thrive on the diverse challenges that come my way daily, knowing that each new experience 
+                                    provides a chance to enhance my proficiency and contribute meaningfully to the organization.  
+                                </p>
+
+                                <p>
+                                    One of my primary responsibilities lies within the Support Desk, where I engage with RIC Consulting's
+                                    esteemed customers to address their QlikView, Qlik Sense, and Qlik SaaS issues. This pivotal role has
+                                    nurtured my problem-solving capabilities and honed my communication skills, both in verbal interactions
+                                    and the drafting of professional emails. This enhanced ability to articulate technical concepts to a diverse
+                                    audience has proven invaluable in fostering positive client relationships and ensuring their seamless experience with our products.  
+                                </p>
+                                <p>
+                                    I've also been meticulously trained as a Qlik developer, enabling me to not only diagnose issues but also participate 
+                                    in the proactive enhancement of the Qlik tools, such as QlikView, Qlik Sense, Qlik SaaS, and QlikNprinting. My role extends 
+                                    to overseeing the upgrades, patching of these tools, and efficiently managing user access, ensuring that our clients' systems 
+                                    operate at peak performance levels.    
+                                </p>
+                                <p>
+                                    Moreover, my proficiency in documentation has been a vital asset in this role. 
+                                    I've established a practice of maintaining meticulous records of support tickets, resolutions, 
+                                    and client interactions. This practice not only facilitates seamless collaboration within the team 
+                                    but also serves as a knowledge base that aids in future issue resolution.
+                                </p>
+                                <p>
+                                    A notable achievement during my tenure has been the creation of an optimized support process, 
+                                    a project that played a crucial role during RIC Consulting's migration to a new CRM system. 
+                                    This process innovation significantly improved support efficiency, enabling a smoother transition 
+                                    for both the organization and its valued clients. 
+                                </p>
+                                <p>
+                                    My journey as a Junior Consultant specializing in Qlik Support at RIC Consulting is an ongoing quest
+                                    for excellence and growth. Each day presents new opportunities to refine my technical acumen, elevate
+                                    client satisfaction, and contribute to the organization's success. I am excited to leverage my unique
+                                    combination of skills and experiences to further enrich my role and drive positive impact in the world
+                                    of technology and client service.  
+                                </p>
+                                
                             </div>
                         </div>
 
