--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Epitome</title>
+    <title>MSLets</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -503,7 +503,7 @@
                                 </p>
 
                                 <p>
-                                    Life Sciences and Physical Sciences:
+                                    Life Sciences and Physical Sciences:<br>
                                     These subjects nurtured my curiosity and passion for understanding how living organisms and the physics world functions at a fundamental level. 
                                     This curiosity has been a driving force in my IT journey, pushing me to explore the intricacies of technologies and systems, uncover vulnerabilities, 
                                     and devise innovative solutions.
@@ -518,17 +518,6 @@
                             </div>
                         </div>
 
-                        <div class="timeline__block">
-                            <div class="timeline__bullet"></div>
-                            <div class="timeline__header">
-                                <p class="timeline__timeframe">July 2005 - June 2009</p>
-                                <h3 class="item-title">School of Hard Knocks</h3>
-                                <h5>Bachelor Degree</h5>
-                            </div>
-                            <div class="timeline__desc">
-                                <p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
-                            </div>
-                        </div>
 
                     </div>
                 </div>
