--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                                 </p>
                                 
                             </div>
-                        </div>
+                        </div><br><br><br>
 
                         <div class="timeline__block">
                             <div class="timeline__bullet"></div>
