--- a/index.html
+++ b/index.html
@@ -536,10 +536,10 @@
 
         <div class="row heading-block heading-block--center" data-aos="fade-up">
             <div class="column large-full">
-                <h2 class="section-heading section-heading--centerbottom">Capabilities</h2>
+                <h2 class="section-heading section-heading--centerbottom">PROJECTS</h2>
 
                 <p class="section-desc">
-                    My passion and goal is to help you make your business standout.
+                   Unlocking Cybersecurity Excellence Showcasing Real-world Solutions in the SOC Analyst Projects
                 </p>
             </div>
         </div> <!-- end heading-block -->
@@ -548,69 +548,47 @@
 
             <div class="column item-service" data-aos="fade-up">
                 <div class="item-service__content">
-                    <h4 class="item-title">Brand Identity</h4>
+                    <h4 class="item-title">Security Analyst   Home LAB 1</h4>
                     <p>
-                    Sit ut cum molestiae. Dolore ducimus qui quasi. Fugiat consequatur sit vel illum vel et 
-                    a delectus. Vel sequi vitae voluptatem perspiciatis eligendi. Voluptatibus optio natus 
-                    asperiores est commodi amet quia architecto. Dolores necessitatibus et.
+                    Performed the following tasks: Installed and configured Nessus Essentials to perform credentialed vulnerability 
+                        scans against Windows 10 Hosts Implemented Vulnerability Management Function on sandbox networks: Discover, 
+                        Prioritize, Assess, Report, Remediate, Verify Conducted vulnerability assessments with Nessus; remediated 
+                        vulnerabilities Developed automated remediation process to pre-emptively deal with vulnerabilities stemming 
+                        from Windows updates and third-party software.
+
                     </p>
                 </div>
             </div>
 
             <div class="column item-service" data-aos="fade-up">
                 <div class="item-service__content">
-                    <h4 class="item-title">Illustration</h4>
+                    <h4 class="item-title">System Administrator Home Lab 2</h4>
                     <p>
-                    Sit ut cum molestiae. Dolore ducimus qui quasi. Fugiat consequatur sit vel illum vel et 
-                    a delectus. Vel sequi vitae voluptatem perspiciatis eligendi. Voluptatibus optio natus 
-                    asperiores est commodi amet quia architecto. Dolores necessitatibus et.
+                        Performed the following tasks: Active Directory Administration on Server 2019: PowerShell: Automated 
+                        provision, maintaining, and deprovisioning user accounts. Implementation and management of Group 
+                        Policy Objects Security Group maintenance and administration Backup administrator using Windows native backup 
+                        utilities. Implementation and maintenance of Windows DNS and DHCP services Configuration of Windows File Servers 
+                        with implementation of quotas and NTFS permissions
+.
                     </p>
+                    
                 </div>
             </div>
 
             <div class="column item-service" data-aos="fade-up">
                 <div class="item-service__content">
-                    <h4 class="item-title">Web Design</h4>
+                    <h4 class="item-title">Security Analyst   Home LAB 2</h4>
                     <p>
-                    Sit ut cum molestiae. Dolore ducimus qui quasi. Fugiat consequatur sit vel illum vel et 
-                    a delectus. Vel sequi vitae voluptatem perspiciatis eligendi. Voluptatibus optio natus 
-                    asperiores est commodi amet quia architecto. Dolores necessitatibus et.
+                        Performed the following tasks: For Penetration Test Reports and Python Projects Implemented Vulnerability Management
+                        Function on sandbox nextworks: Discover, Prioritize, Assess, Report, Remediate, Verify Conducted vulnerability assessments 
+                        with Nessus; remediated vulnerabilities Performed penetration tests on VulnHub and HackTheBox using the high-level assessment 
+                        methodology described by NIST 800-115. (See github.com/jtech.io for full reports) Experience using nmap in conjunction with bash 
+                        and python scripting to automate the fingerprinting phases of security assessments and pen tests.
+
                     </p>
                 </div>
             </div>
 
-            <div class="column item-service" data-aos="fade-up">
-                <div class="item-service__content">
-                    <h4 class="item-title">Product Strategy</h4>
-                    <p>
-                    Sit ut cum molestiae. Dolore ducimus qui quasi. Fugiat consequatur sit vel illum vel et 
-                    a delectus. Vel sequi vitae voluptatem perspiciatis eligendi. Voluptatibus optio natus 
-                    asperiores est commodi amet quia architecto. Dolores necessitatibus et.
-                    </p>
-                </div>
-            </div>
-
-            <div class="column item-service" data-aos="fade-up">
-                <div class="item-service__content">
-                    <h4 class="item-title">UI/UX Design</h4>
-                    <p>
-                    Sit ut cum molestiae. Dolore ducimus qui quasi. Fugiat consequatur sit vel illum vel et 
-                    a delectus. Vel sequi vitae voluptatem perspiciatis eligendi. Voluptatibus optio natus 
-                    asperiores est commodi amet quia architecto. Dolores necessitatibus et.
-                    </p>
-                </div>
-            </div>
-
-            <div class="column item-service" data-aos="fade-up">
-                <div class="item-service__content">
-                    <h4 class="item-title">Mobile Design</h4>
-                    <p>
-                    Sit ut cum molestiae. Dolore ducimus qui quasi. Fugiat consequatur sit vel illum vel et 
-                    a delectus. Vel sequi vitae voluptatem perspiciatis eligendi. Voluptatibus optio natus 
-                    asperiores est commodi amet quia architecto. Dolores necessitatibus et.
-                    </p>
-                </div>
-            </div>
 
         </div> <!-- end services-list -->
 
@@ -624,7 +602,7 @@
         <div class="row heading-block heading-block--center" data-aos="fade-up">
             <div class="column large-full">
                 <h2 class="section-desc">
-                    Need a great reliable web hosting?
+                   More projects are comming!!!!!
                 </h2>
             </div>
         </div> <!-- end heading-block -->
@@ -632,12 +610,12 @@
         <div class="row cta-content" data-aos="fade-up">
             <div class="column large-full">
                 <p>
-                We highly recommend <a href="https://www.dreamhost.com/r.cgi?287326">DreamHost</a>.
-                Powerful web and Wordpress hosting. Guaranteed.
-                Starting at $2.95 per month.
+                Please note that I will also be documenting Cybersecurity journey on my Youtube Channel called
+                    <a href="https://www.dreamhost.com/r.cgi?287326">Cyber_with_MSLets</a>.
+               This will be like the stop shop for everything Cyber. Lets take this journey together. Enjoy!!!
                 </p>
 
-                <a href="https://www.dreamhost.com/r.cgi?287326" class="btn full-width">Get Started</a>
+                <a href="https://www.dreamhost.com/r.cgi?287326" class="btn full-width">CYBER_WITH_MSLETS</a>
             </div>
         </div> <!-- end ad-content -->
 
@@ -650,10 +628,9 @@
 
         <div class="row heading-block heading-block--center" data-aos="fade-up">
             <div class="column large-full">
-                <h2 class="section-heading section-heading--centerbottom">Selected Works</h2>
+                <h2 class="section-heading section-heading--centerbottom">CLICK ON BADGE</h2>
                 <p class="section-desc">
-                    Here are some of my selected works I have done lately. Feel free to 
-                    check them out.
+                   Here are some of my Certifications and Awards.
                 </p>
             </div>
         </div> <!-- end heading-block -->
@@ -880,12 +857,13 @@
         <div class="row contact-main" data-aos="fade-up">
             <div class="column large-full">
                 <p class="contact-email">
-                    <a href="mailto:#0">hello@epitome.com</a>
+                    <a href="mailto:#0">mslets6040@gmail.com</a>
                 </p>
 
                 <p class="section-desc">
-                I'm happy to connect, listen and help. Let's work together and build
-                something awesome. Let's turn your idea to an even greater product.
+                I'm excited to connect and ready to dive into action. Let's collaborate to craft something extraordinary, 
+                    turning your ideas into exceptional products that stand out. I'm prepared to contribute my skills and 
+                    expertise to your team, and together, we can create remarkable solutions. Email Me.
                 <a href="mailto:#0">Email Me</a>.
                 </p>
             </div>
@@ -895,7 +873,7 @@
 
             <div class="column large-5 medium-full contact-phone">
                 <h4>Call Me</h4>
-                <a href="tel:197-543-2345">+197 543 2345</a>
+                <a href="tel:197-543-2345">+27 60 525 06745</a>
             </div>
 
             <div class="column large-7 medium-full contact-social">
