--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <ul class="header-main-nav">
                 <li class="current"><a class="smoothscroll" href="#intro" title="intro">Intro</a></li>
                 <li><a class="smoothscroll" href="#about" title="about">About</a></li>
-                <li><a class="smoothscroll" href="#services" title="services">Services</a></li>
-                <li><a class="smoothscroll" href="#works" title="works">Works</a></li>
+                <li><a class="smoothscroll" href="#services" title="services">Projects</a></li>
+                <li><a class="smoothscroll" href="#works" title="works">Certificates & Awards</a></li>
                 <li><a class="smoothscroll" href="#contact" title="contact us">Say Hello</a></li>	
             </ul>
 
