--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
             <div class="column large-full">
                 <p>
                 Please note that I will also be documenting Cybersecurity journey on my Youtube Channel called
-                    <a href="https://www.dreamhost.com/r.cgi?287326">Cyber_with_MSLets</a>.
+                    <a href="https://youtube.com/@Cyber_with_MSLets">Cyber_with_MSLets</a>.
                This will be like the stop shop for everything Cyber. Lets take this journey together. Enjoy!!!
                 </p>
 
@@ -643,9 +643,9 @@
                 <div class="masonry__brick" data-aos="fade-up">
                     <div class="item-folio">
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-city-building.jpg" class="thumb-link" title="Shutterbug" data-size="1050x700">
-                                <img src="images/portfolio/city-building.jpg" 
-                                     srcset="images/portfolio/city-building.jpg 1x, images/portfolio/city-building@2x.jpg 2x" alt="">
+                            <a href="images\portfolio\gallery\(ISC)² Candidate.png" class="thumb-link" title="Shutterbug" data-size="1050x700">
+                                <img src="images\portfolio\gallery\(ISC)² Candidate.png" 
+                                     srcset="images\portfolio\gallery\(ISC)² Candidate.png 1x, images\portfolio\gallery\(ISC)² Candidate.png 2x" alt="">
                             </a>    
                             <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
