--- a/index.html
+++ b/index.html
@@ -837,9 +837,9 @@
                     <div class="item-folio">
                             
                         <div class="item-folio__thumb">
-                            <a href="images\portfolio\gallery\NSE 2.png" class="thumb-link" title="Palmeira" data-size="1050x700">
-                                <img src="images\portfolio\gallery\NSE 2.png"
-                                     srcset="images\portfolio\gallery\NSE 2.png 1x, images\portfolio\gallery\NSE 2.png 2x" alt="">
+                            <a href="images\portfolio\gallery\qualys.jpg" class="thumb-link" title="Palmeira" data-size="1050x700">
+                                <img src="images\portfolio\gallery\qualys.jpg"
+                                     srcset="images\portfolio\gallery\qualys.jpg 1x, images\portfolio\gallery\qualys.jpg 2x" alt="">
                             </a>
                             <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
