--- a/index.html
+++ b/index.html
@@ -934,14 +934,14 @@
         <div class="row contact-main" data-aos="fade-up">
             <div class="column large-full">
                 <p class="contact-email">
-                    <a href="mailto:#0">mslets6040@gmail.com</a>
+                    <a href="mailto:mslets@gmail.com"">mslets6040@gmail.com</a>
                 </p>
 
                 <p class="section-desc">
                 I'm excited to connect and ready to dive into action. Let's collaborate to craft something extraordinary, 
                     turning your ideas into exceptional products that stand out. I'm prepared to contribute my skills and 
                     expertise to your team, and together, we can create remarkable solutions. Email Me.
-                <a href="mailto:#0">Email Me</a>.
+                <a href="mailto:mslets@gmail.com">Email Me</a>.
                 </p>
             </div>
         </div>
@@ -950,7 +950,7 @@
 
             <div class="column large-5 medium-full contact-phone">
                 <h4>Call Me</h4>
-                <a href="tel:197-543-2345">+27 60 525 06745</a>
+                <a href="tel:+27 60 525 06745">+27 60 525 06745</a>
             </div>
 
             <div class="column large-7 medium-full contact-social">
