--- a/index.html
+++ b/index.html
@@ -876,43 +876,25 @@
             <div class="column large-full testimonials__slider">
 
                 <div class="testimonials__slide">
-                    <p>Molestiae incidunt consequatur quis ipsa autem nam sit enim magni. Voluptas tempore rem. 
-                    Explicabo a quaerat sint autem dolore ducimus ut consequatur neque.  Nisi dolores quaerat fuga rem nihil nostrum.
-                    Laudantium quia consequatur molestias delectus culpa.</p>
+                    <p>
+                        Samson worked with me during the QlikWorld Tour conference in Johannesburg. 
+                        His responsibilities included welcoming delegates, providing information to all
+                        participants, collecting surveys, and other ad-hoc operational tasks. 
+                        He executed all his assignments exactly as required and he demonstrated quick 
+                        thinking and problem solving in unexpected situations. He was very professional 
+                        throughout the event, was always on time, and had a very proactive attitude. 
+                        It was a real pleasure to work with Samson on this project, and I would not
+                        hesitate to bring him on board for any future projects.
+                    </p>
                     <div class="testimonials__info">
                         <img src="images/avatars/user-02.jpg" alt="Author image" class="testimonials__avatar">
                         <cite class="testimonials__cite">
-                            <strong>Tim Cook</strong>
-                            <span>CEO, Apple</span>
+                            <strong>Marcela Soukupova, PMP®</strong>
+                            <span>Field Marketing Manager at QlikField Marketing Manager at Qlik November 17, 2022, Marcela managed Samson Matome directly</span>
                         </cite>
                     </div>
                 </div> <!-- end testimonials__slide -->
 
-                <div class="testimonials__slide">
-                    <p>Excepturi nam cupiditate culpa doloremque deleniti repellat. Veniam quos repellat voluptas animi adipisci.
-                    Nisi eaque consequatur. Voluptatem dignissimos ut ducimus accusantium perspiciatis.
-                        Quasi voluptas eius distinctio. Atque eos maxime.</p>
-                    <div class="testimonials__info">
-                        <img src="images/avatars/user-01.jpg" alt="Author image" class="testimonials__avatar">
-                        <cite class="testimonials__cite">
-                            <strong>Sundar Pichai</strong>
-                            <span>CEO, Google</span>
-                        </cite>
-                    </div>
-                </div> <!-- end testimonials__slide -->
-
-                <div class="testimonials__slide">
-                    <p>Repellat dignissimos libero. Qui sed at corrupti expedita voluptas odit. Nihil ea quia nesciunt. Ducimus aut sed ipsam.  
-                    Autem eaque officia cum exercitationem sunt voluptatum accusamus. Quasi voluptas eius distinctio.
-                    Voluptatem dignissimos ut.</p>
-                    <div class="testimonials__info">
-                        <img src="images/avatars/user-04.jpg" alt="Author image" class="testimonials__avatar">
-                        <cite class="testimonials__cite">
-                            <strong>Satya Nadella</strong>
-                            <span>CEO, Microsoft</span>
-                        </cite>
-                    </div>
-                </div> <!-- end testimonials__slide -->
                 
             </div> <!-- end testimonials__slider -->
 
