--- a/index.html
+++ b/index.html
@@ -890,7 +890,7 @@
                         <img src="images/avatars/user-01.jpg" alt="Author image" class="testimonials__avatar">
                         <cite class="testimonials__cite">
                             <strong>Marcela Soukupova, PMP®</strong>
-                            <span>Field Marketing Manager at QlikField Marketing Manager at Qlik November 17, 2022, Marcela managed Samson Matome directly</span>
+                            <span>Field Marketing Manager at QlikField Marketing Manager at Qlik</span>
                         </cite>
                     </div>
                 </div> <!-- end testimonials__slide -->
