--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                This will be like the stop shop for everything Cyber. Lets take this journey together. Enjoy!!!
                 </p>
 
-                <a href="https://www.dreamhost.com/r.cgi?287326" class="btn full-width">CYBER_WITH_MSLETS</a>
+                <a href="https://youtube.com/@Cyber_with_MSLets" class="btn full-width">CYBER_WITH_MSLETS</a>
             </div>
         </div> <!-- end ad-content -->
 
