--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
                                 <img src="images\portfolio\gallery\NSE 1.png"
                                      srcset="images\portfolio\gallery\NSE 1.png 1x, images\portfolio\gallery\NSE 2.png 2x" alt="">
                             </a>
-                            <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                            <a href="https://drive.google.com/file/d/1pJrDdMl8Oo07osn4b_C7FlG71FVVYRJW/view?usp=sharing" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
@@ -817,7 +817,7 @@
                                 <img src="images\portfolio\gallery\NSE 2.png"
                                      srcset="images\portfolio\gallery\NSE 2.png 1x, images\portfolio\gallery\NSE 2.png 2x" alt="">
                             </a>
-                            <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                            <a href="https://drive.google.com/file/d/1kbgVWkteAse6I94PLFxJQNbTlek7zOwT/view?usp=sharing" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
@@ -842,7 +842,7 @@
                                 <img src="images\portfolio\gallery\qualys.jpg"
                                      srcset="images\portfolio\gallery\qualys.jpg 1x, images\portfolio\gallery\qualys.jpg 2x" alt="">
                             </a>
-                            <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                            <a href="https://drive.google.com/file/d/1RpPY87z5fsAE0aT_NZMAycJsD-m2DZir/view?usp=sharing" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
