--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
-                                Network Security Associate<br>
+                                Fortinet Network Security Associate<br>
                             </h4>
                             <p class="item-folio__cat">
                                 NSE 1
@@ -821,7 +821,7 @@
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
-                               Network Security Associate<br>
+                               Fortinet Network Security Associate<br>
                             </h4>
                             <p class="item-folio__cat">
                                 NSE 2
@@ -850,6 +850,33 @@
                             </h4>
                             <p class="item-folio__cat">
                                 Vunerability Managment Detection & Response
+                            </p>
+                        </div>
+                        <div class="item-folio__caption">
+                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                        </div>
+                    </div>
+                </div> <!-- end masonry__brick -->
+
+
+
+
+                <div class="masonry__brick" data-aos="fade-up">
+                    <div class="item-folio">
+                            
+                        <div class="item-folio__thumb">
+                            <a href="images\portfolio\gallery\qualys.jpg" class="thumb-link" title="Palmeira" data-size="1050x700">
+                                <img src="images\portfolio\gallery\qualys.jpg"
+                                     srcset="images\portfolio\gallery\qualys.jpg 1x, images\portfolio\gallery\qualys.jpg 2x" alt="">
+                            </a>
+                            <a href="https://drive.google.com/file/d/1RpPY87z5fsAE0aT_NZMAycJsD-m2DZir/view?usp=sharing" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                        </div>
+                        <div class="item-folio__text">
+                            <h4 class="item-folio__title">
+                               EC-Council: Ethical Hacking Essentials<br>
+                            </h4>
+                            <p class="item-folio__cat">
+                                E|HE
                             </p>
                         </div>
                         <div class="item-folio__caption">
