--- a/index.html
+++ b/index.html
@@ -865,11 +865,11 @@
                     <div class="item-folio">
                             
                         <div class="item-folio__thumb">
-                            <a href="images\portfolio\gallery\qualys.jpg" class="thumb-link" title="Palmeira" data-size="1050x700">
-                                <img src="images\portfolio\gallery\qualys.jpg"
-                                     srcset="images\portfolio\gallery\qualys.jpg 1x, images\portfolio\gallery\qualys.jpg 2x" alt="">
+                            <a href="images\portfolio\gallery\EHE.jpeg" class="thumb-link" title="Palmeira" data-size="1050x700">
+                                <img src="images\portfolio\gallery\EHE.jpeg"
+                                     srcset="images\portfolio\gallery\EHE.jpeg 1x, images\portfolio\gallery\EHE.jpeg 2x" alt="">
                             </a>
-                            <a href="https://drive.google.com/file/d/1RpPY87z5fsAE0aT_NZMAycJsD-m2DZir/view?usp=sharing" class="item-folio__project-link" title="Project link" target="_blank"></a>
+                            <a href="https://drive.google.com/file/d/1gSZ9hWx_zo1qspgH3olJerL09GncfnOD/view?usp=sharing" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
                         <div class="item-folio__text">
                             <h4 class="item-folio__title">
