--- a/index.html
+++ b/index.html
@@ -865,9 +865,9 @@
                     <div class="item-folio">
                             
                         <div class="item-folio__thumb">
-                            <a href="images\portfolio\gallery\EHE.jpeg" class="thumb-link" title="Palmeira" data-size="1050x700">
-                                <img src="images\portfolio\gallery\EHE.jpeg"
-                                     srcset="images\portfolio\gallery\EHE.jpeg 1x, images\portfolio\gallery\EHE.jpeg 2x" alt="">
+                            <a href="images\portfolio\gallery\EHE.png" class="thumb-link" title="Palmeira" data-size="1050x700">
+                                <img src="images\portfolio\gallery\EHE.png"
+                                     srcset="images\portfolio\gallery\EHE.png 1x, images\portfolio\gallery\EHE.png 2x" alt="">
                             </a>
                             <a href="https://drive.google.com/file/d/1gSZ9hWx_zo1qspgH3olJerL09GncfnOD/view?usp=sharing" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
