--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     
             <div class="row about-me__buttons">
                 <div class="column large-half tab-full" data-aos="fade-up">
-                    <a href="mailto:mslets@gmail.com" class="btn btn--stroke full-width">Hire Me</a>
+                    <a href="mailto:mslets6040@gmail.com" class="btn btn--stroke full-width">Hire Me</a>
 
                 </div>
                 <div class="column large-half tab-full" data-aos="fade-up">
