--- a/index.html
+++ b/index.html
@@ -891,6 +891,52 @@
 
         </div> <!-- end masonry-wrap -->
 
+
+
+        <div class="column large-6 tab-full">
+
+                <h3>Buttons</h3>
+
+                <p>
+                    <a class="btn btn--primary full-width" href="#0">Primary Button</a>
+                    <a class="btn full-width" href="#0">Default Button</a>
+                    <a class="btn btn--stroke full-width" href="#0">Stroke Button</a>
+                </p>
+
+                <h3>Skill Bars</h3>
+                
+                <ul class="skill-bars">
+                    <li>
+                    <div class="progress percent90"><span>90%</span></div>
+                    <strong>HTML5</strong>
+                    </li>
+                    <li>
+                    <div class="progress percent85"><span>85%</span></div>
+                    <strong>CSS3</strong>
+                    </li>
+                    <li>
+                    <div class="progress percent70"><span>70%</span></div>
+                    <strong>JQuery</strong>
+                    </li>
+                    <li>
+                    <div class="progress percent95"><span>95%</span></div>
+                    <strong>PHP</strong>
+                    </li>
+                    <li>
+                    <div class="progress percent75"><span>75%</span></div>
+                    <strong>Wordpress</strong>
+                    </li>
+                    <li>
+                    <div class="progress percent90"><span>90%</span></div>
+                    <strong>Angular JS</strong>
+                    </li>
+                </ul>
+
+     </div>
+
+
+        
+
     </section> <!-- end s-work -->
 
 
